# zellij

./: Cargo.toml
.github/workflows/: rust.yml
src/: commands.rs  main.rs  sessions.rs
zellij-client/: Cargo.toml
zellij-client/src/: cli_client.rs  input_handler.rs  lib.rs  os_input_output.rs  os_input_output_windows.rs  stdin_handler.rs  stdin_handler_windows.rs
zellij-server/: Cargo.toml
zellij-server/src/: background_jobs.rs  lib.rs  os_input_output.rs  os_input_output_windows.rs  pty.rs  route.rs  screen.rs  terminal_bytes.rs  terminal_output.rs
zellij-server/src/plugins/: plugin_loader.rs  zellij_exports.rs
zellij-server/src/unit/: screen_tests.rs
zellij-utils/: Cargo.toml
zellij-utils/assets/plugins/: about.wasm  compact-bar.wasm  configuration.wasm  fixture-plugin-for-tests.wasm  multiple-select.wasm  plugin-manager.wasm  session-manager.wasm  share.wasm  status-bar.wasm  strider.wasm  tab-bar.wasm
zellij-utils/src/: cli.rs  consts.rs  data.rs  input_trace.rs  ipc.rs  lib.rs  sessions.rs  setup.rs
zellij-utils/src/input/: options.rs
zellij-utils/src/windows_utils/: named_pipe.rs
