[package]
name = "zellij-client"
version = "0.42.2"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "The client-side library for Zellij"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
interprocess = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mio = { version = "0.8.8", default-features = false, features = ['os-ext'] }
notify-debouncer-full = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { version = "0.8", default-features = false }
signal-hook = { workspace = true }
termwiz = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zellij-utils = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
]

[dev-dependencies]
insta = "1.6.0"

[features]
unstable = []
